# simple-web-scraper

./: .gitignore  Cargo.toml  README.md  flake.nix
simple_rust_web_scraper/: Cargo.toml
simple_rust_web_scraper/src/: lib.rs  main.rs  web_scraper.rs
simple_rust_web_scraper/src/models/: base.rs  country.rs  dice_job.rs  general.rs
simple_rust_web_scraper/src/utils/: file_writer.rs  html_prettifier.rs  http_client.rs
tui/: Cargo.toml
tui/src/: lib.rs  main.rs
tui/src/utility/: ui.rs
