[workspace]
# Set this to quiet the "resolver = 1" warning when using the default resolver
resolver = "2"
members = ["simple_rust_web_scraper"]


# These settings will greatly reduce the binary size when \
# running `cargo build --release`
# NOTE: Make sure you understand what each of these settings does!
[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
